updated title sizes

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,11 @@ footer {
 }
 
 .about-text h1 {
+    font-size: 3em;
+    margin-bottom: 0px;
+}
+
+.about-text h2 {
     font-size: 2em;
     margin-bottom: 0px;
 }
