--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ header {
 nav ul {
     list-style: none;
     display: flex;
+    font-weight: bold;
+    font-size: larger;
     justify-content: center;
     padding: 0;
     margin: 0;
