--- a/styles.css
+++ b/styles.css
@@ -269,4 +269,9 @@ footer {
     .about-text p {
         font-size: 1em;
     }
+    header {
+        background-color: #000;
+        color: #fff;
+        padding: 30px 0;
+    }
 }
